--- a/docs/skin.css
+++ b/docs/skin.css
@@ -1,1 +1,445 @@
+html {
+  background-image: url('https://pr0gamehub.neffez.dev/background.jpg');
+  background-size: cover;
+}
+.text-left {
+  text-align: left !important;
+}
+.text-center {
+  text-align: center !important;
+}
+.text-right {
+  text-align: right !important;
+}
+.text-red {
+  color: #ee4d2e !important;
+}
+.text-blue {
+  color: #75c0c7 !important;
+}
+.text-gray {
+  color: #888 !important;
+}
+.text-green {
+  color: #addc8d !important;
+}
+.build_submit {
+  color: #8bff6b;
+  margin-bottom: 15px;
+}
+.text-yellow {
+  color: #888 !important;
+}
+content.home .infos {
+  padding: 15px;
+  margin: 0 0 15px 0;
+}
+content.home .infos ul {
+  margin: 0;
+  padding: 0 10px;
+}
+content.home .infos.noPadding,
+content.home .infos:last-child {
+  padding: 0 !important;
+}
+content.home .infos + br {
+  display: none;
+}
+content.home table.borderless tr,
+content.home table.borderless tr > th,
+content.home table.borderless tr > td {
+  border: none !important;
+  background: transparent !important;
+}
+content.buildings .infos,
+content.hangar .infos,
+content.defense .infos,
+content.research .infos,
+content.buildings .infoso,
+content.hangar .infoso,
+content.defense .infoso,
+content.research .infoso {
+  margin: 15px 0 0 0;
+}
+content.buildings.hangar input[type=submit].b,
+content.hangar.hangar input[type=submit].b,
+content.defense.hangar input[type=submit].b,
+content.research.hangar input[type=submit].b {
+  border-radius: 2px !important;
+  border: 1px solid #222 !important;
+  color: #addc8d !important;
+  padding: 5px 15px !important;
+  background: #3A3A3A !important;
+  min-height: 0;
+  margin: 15px 0;
+}
+header .planetImage,
+header .fixed img,
+logo .fixed a {
+  display: none !important;
+}
+logo .fixed {
+  background: url('https://pro-ffview.gamers-universe.eu/logo-n.png') no-repeat left center !important;
+  background-size: contain !important;
+}
+top,
+.wrapper .fixed,
+header {
+  height: 60px;
+  min-height: 0;
+}
+top #planetSelector,
+.wrapper .fixed #planetSelector,
+header #planetSelector {
+  top: 15px;
+  padding: 5px 0px;
+}
 
+@media (max-width: 699px) {
+  top #planetSelector,
+  .wrapper .fixed #planetSelector,
+  header #planetSelector {
+    top: 50px;
+  }
+
+}
+
+@media (max-width: 799px) {
+    .planet-list {
+        display: none !important;
+    }
+}
+
+top #resource_mobile,
+.wrapper .fixed #resource_mobile,
+header #resource_mobile {
+  margin-top: 15px !important;
+}
+menu .fixed {
+  top: 50px;
+}
+.wrapper {
+  grid-template-rows: 50px 1fr auto;
+}
+.wrapper .fixed {
+  background: rgba(0, 0, 0, 0.9);
+}
+.wrapper .highlight {
+  color: #ee4d2e !important;
+  margin-top: 5px;
+  display: block;
+}
+.wrapper .player_names {
+  font-size: 10px;
+  color: #888;
+}
+.wrapper #hubOverview th,
+.wrapper #hubOverview td {
+  padding: 3px 5px;
+}
+.wrapper table {
+  width: 100% !important;
+  max-width: inherit !important;
+}
+.wrapper table th {
+  background: transparent;
+  border: none !important;
+  padding: 5px 10px !important;
+}
+.wrapper table td {
+  border: none !important;
+  outline: 1px solid #161618;
+  padding: 3px 10px;
+}
+.wrapper ul#menu {
+  background: #161618;
+  border-radius: 4px;
+  padding: 10px 0;
+  margin: 10px 0;
+}
+.wrapper ul#menu li,
+.wrapper ul#menu li a {
+  border: none !important;
+  background: none !important;
+  text-align: left !important;
+  font-size: 12px;
+  color: #f2f5f4;
+}
+.wrapper ul#menu li i,
+.wrapper ul#menu li a i {
+  display: inline-block;
+  width: 20px;
+  opacity: 0.75;
+}
+.wrapper ul#menu li:hover,
+.wrapper ul#menu li a:hover {
+  color: #75c0c7 !important;
+  font-weight: normal !important;
+}
+.wrapper ul#menu .menu-separator {
+  height: 1px !important;
+  border-bottom: 1px dashed rgba(255, 255, 255, 0.25) !important;
+  padding: 0 !important;
+  min-height: auto !important;
+  margin: 10px;
+}
+.wrapper content {
+  padding-top: 10px;
+}
+.wrapper content .message {
+  background: #ee4d2e;
+  border-radius: 2px;
+  text-align: left;
+  padding-left: 50px;
+  top: 15px;
+  right: 15px;
+  z-index: 10000;
+  transition: background 200ms ease-in-out;
+}
+.wrapper content .message a {
+  transition: all 200ms ease-in-out;
+}
+.wrapper content .message:before {
+  transition: all 250ms ease-in-out;
+  content: "\f0e0";
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-family: "Font Awesome 5 Pro";
+  font-size: 25px;
+  font-weight: 300;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  line-height: 1;
+}
+.wrapper content .message:hover {
+  background: #f2f5f4;
+}
+.wrapper content .message:hover:before,
+.wrapper content .message:hover a,
+.wrapper content .message:hover a:hover {
+  font-weight: 300 !important;
+  color: #161618 !important;
+}
+.wrapper content .infos > ul#hidden-div2 li {
+  display: flex;
+}
+.wrapper content .infos > ul#hidden-div2 li > * {
+  text-align: left;
+}
+.wrapper content .infos > ul#hidden-div2 li > span:first-child,
+.wrapper content .infos > ul#hidden-div2 li > span:nth-child(2),
+.wrapper content .infos > ul#hidden-div2 li > span:nth-child(4) {
+  flex-basis: 10%;
+}
+.wrapper content .infos > ul#hidden-div2 li > span:nth-child(3) {
+  width: 70%;
+}
+.wrapper content #buildlist {
+  border: none !important;
+  background: #161618 !important;
+  border-radius: 4px;
+  margin: 0 0 15px 0;
+  overflow: inherit;
+  display: flex;
+}
+.wrapper content #buildlist > div:nth-child(2) {
+  flex-basis: 250px;
+}
+.wrapper content #buildlist > div {
+  border: none;
+}
+.wrapper content #buildlist button {
+  margin: 10px 0;
+}
+.wrapper content #buildlist .bulida,
+.wrapper content #buildlist .bulidb,
+.wrapper content #buildlist .buildb {
+  float: none !important;
+  width: 100% !important;
+  height: auto !important;
+}
+.wrapper content #buildlist .bulida span[style],
+.wrapper content #buildlist .bulidb span[style],
+.wrapper content #buildlist .buildb span[style] {
+  color: #ee4d2e !important;
+}
+.wrapper content .building,
+.wrapper content .hangar > form {
+  height: auto;
+  display: flex;
+}
+.wrapper content .building > div:nth-child(1),
+.wrapper content .hangar > form > div:nth-child(1) {
+  flex-basis: 25%;
+  text-align: left;
+  background: #161618;
+}
+.wrapper content .building a:hover,
+.wrapper content .hangar > form a:hover {
+  color: #75c0c7 !important;
+  font-weight: normal;
+}
+.wrapper content .building .building-left,
+.wrapper content .hangar > form .building-left {
+  height: auto;
+  text-align: left;
+}
+.wrapper content .building .building-left img,
+.wrapper content .hangar > form .building-left img {
+  height: 75px;
+  width: auto;
+  margin-right: 30px !important;
+  border-radius: 4px;
+}
+.wrapper content .building .building-left span[style],
+.wrapper content .hangar > form .building-left span[style] {
+  color: #ee4d2e !important;
+}
+.wrapper content .building .building-right,
+.wrapper content .hangar > form .building-right {
+  height: auto;
+  padding: 15px;
+  text-align: right;
+}
+.wrapper content .building .building-right form button,
+.wrapper content .hangar > form .building-right form button {
+  max-width: 100%;
+}
+.wrapper .ui-progressbar {
+  background: #1b1e1f !important;
+  border-radius: 1px;
+}
+.wrapper .ui-progressbar .ui-progressbar-value {
+  background: #ee4d2e;
+  background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
+  border: none;
+  border-radius: 1px;
+}
+.wrapper button {
+  padding: 5px 15px;
+  border: 1px solid #222;
+  border-radius: 2px;
+  background: #1b1e1f;
+}
+.wrapper .planeto,
+.wrapper .infos,
+.wrapper .infoso,
+.wrapper .buildl {
+  background: #161618 !important;
+  border-radius: 4px;
+}
+.wrapper .planeto .buildn,
+.wrapper .infos .buildn,
+.wrapper .infoso .buildn,
+.wrapper .buildl .buildn {
+  background: #1b1e1f;
+  border-radius: 4px;
+  padding: 15px;
+}
+#resources_mobile img {
+  display: none;
+}
+#resources_mobile .resource_name {
+  color: #ee4d2e;
+}
+#resources_mobile .res_current {
+  color: #f2f5f4;
+  display: inline;
+}
+#resources_mobile .res_current:after {
+  content: ' / ';
+}
+#resources_mobile .res_current.res_current_max {
+  color: #ee4d2e;
+}
+#resources_mobile .res_max {
+  color: #addc8d;
+  display: inline;
+}
+#resources_mobile #resource_mobile:last-child span[style] {
+  color: #ee4d2e !important;
+}
+#resources_mobile a:hover {
+  font-weight: normal;
+  color: #75c0c7 !important;
+}
+.badge {
+  display: inline-block;
+  font-size: 10px;
+  text-transform: uppercase;
+  padding: 3px;
+  border-radius: 2px;
+  font-weight: bold;
+}
+.badge-ress,
+.badge-fight,
+.badge-ships,
+.badge-nothing,
+.badge-black-hole {
+  float: right;
+}
+.badge-ress {
+  background: #addc8d;
+  color: #161618;
+}
+.badge-fight {
+  background: #ee4d2e;
+  color: #f2f5f4;
+}
+.badge-ships {
+  background: #75c0c7;
+  color: #161618;
+}
+.badge-nothing {
+  background: #888;
+  color: #161618;
+}
+.badge-black-hole {
+  background: #000;
+  color: #ee4d2e;
+}
+.fade-25,
+.fade-75 {
+  opacity: 0.25 !important;
+  transition: opacity 250ms ease-in-out;
+}
+.fade-25.fade-75,
+.fade-75.fade-75 {
+  opacity: 0.75 !important;
+}
+.fade-25:hover,
+.fade-75:hover {
+  opacity: 0.9 !important;
+}
+#tooltip {
+  max-width: 750px !important;
+}
+content.hub .infos,
+content.hub .infos:last-child {
+  padding: 15px !important;
+  margin: 0 0 15px 0 !important;
+}
+#planetSelector {
+  max-width: 125px;
+}
+.fleet-movement a:hover {
+  color: #f2f5f4 !important;
+}
+.fleet-movement a.tooltip {
+  font-weight: normal !important;
+}
+.wrapper content {
+  max-width: 1400px !important;
+}
+
+/*Darknebula Fix*/
+body.mceContentBody, input, button, select, option, textarea, .ui-widget-content {
+    backdrop-filter: none !important;
+}
+/*# sourceMappingURL=skin.css.map */
