--- a/docs/skin.css
+++ b/docs/skin.css
@@ -441,4 +441,8 @@ content.hub .infos:last-child {
 body.mceContentBody, input, button, select, option, textarea, .ui-widget-content {
     backdrop-filter: none !important;
 }
+html {
+    visibility: visible;
+    opacity: 1;
+}
 /*# sourceMappingURL=skin.css.map */
