--- a/docs/skin.css
+++ b/docs/skin.css
@@ -94,7 +94,6 @@ top #planetSelector,
 .wrapper .fixed #planetSelector,
 header #planetSelector {
   top: 15px;
-  padding: 5px 0px;
 }
 
 @media (max-width: 699px) {
@@ -179,7 +178,7 @@ menu .fixed {
 }
 .wrapper ul#menu .menu-separator {
   height: 1px !important;
-  border-bottom: 1px dashed rgba(255, 255, 255, 0.25) !important;
+  border-bottom: 2px solid rgba(255, 0, 0, 0.25) !important;
   padding: 0 !important;
   min-height: auto !important;
   margin: 10px;
@@ -414,9 +413,6 @@ content.hub .infos,
 content.hub .infos:last-child {
   padding: 15px !important;
   margin: 0 0 15px 0 !important;
-}
-#planetSelector {
-  max-width: 125px;
 }
 .fleet-movement a:hover {
   color: #f2f5f4 !important;
