--- a/docs/skin.css
+++ b/docs/skin.css
@@ -1,16 +1,3 @@
-/* make the icon sit on the same line as the text */
-#resources_mobile img {
-  vertical-align: middle;   /* align the image with the text line [web:67][web:73] */
-  display: inline-block;    /* ensure vertical-align works predictably [web:68] */
-}
-
-#resources_mobile img {
-  vertical-align: middle;
-  display: inline-block;
-  position: relative;
-  top: 1px; /* adjust +1 / -1 until it visually lines up */
-}
-
 html {
   background-image: url('https://pr0gamehub.neffez.dev/background.jpg');
   background-size: cover;
@@ -123,6 +110,7 @@ top #planetSelector,
 .wrapper .fixed #planetSelector,
 header #planetSelector {
   top: 15px;
+  width: auto;
 }
 
 @media (max-width: 699px) {
