--- a/docs/skin.css
+++ b/docs/skin.css
@@ -1,490 +1,82 @@
-/* Optional: force no rounded corners anywhere */
-* {
-  border-radius: 0 !important;
+/* Full viewport reset - ADD THIS AT THE TOP */
+html, body {
+  margin: 0 !important;
+  padding: 0 !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  overflow-x: hidden !important;
 }
 
 html {
   background-image: url('https://pr0gamehub.neffez.dev/background.jpg');
   background-size: cover;
+  height: 100vh !important;
+  width: 100vw !important;
 }
 
-/* Typography helpers */
-.text-left { text-align: left !important; }
-.text-center { text-align: center !important; }
-.text-right { text-align: right !important; }
-
-/* Softer accent colors */
-.text-red {
-  /* was #ee4d2e */
-  color: #ff7a55 !important;
-}
-.text-blue {
-  /* was #75c0c7 */
-  color: #8fd0d7 !important;
-}
-.text-gray {
-  color: #a0a4aa !important;
-}
-.text-green {
-  /* was #addc8d */
-  color: #bde6a0 !important;
-}
-.build_submit {
-  /* was #8bff6b */
-  color: #b7f88f;
-  margin-bottom: 15px;
-}
-.text-yellow {
-  color: #e8d27a !important;
-}
-
-/* Info boxes a bit softer and rounded */
-.infos{
-  border-radius: 0 !important;
-}
-
-/* Content spacing */
-content.home .infos {
-  padding: 15px;
-  margin: 0 0 15px 0;
-}
-content.home .infos ul {
-  margin: 0;
-  padding: 0 10px;
-}
-content.home .infos.noPadding,
-content.home .infos:last-child {
-  padding: 0 !important;
-}
-content.home .infos + br {
-  display: none;
-}
-
-/* Tables */
-content.home table.borderless tr,
-content.home table.borderless tr > th,
-content.home table.borderless tr > td {
-  border: none !important;
-  background: transparent !important;
-}
-
-/* Section blocks */
-content.buildings .infos,
-content.hangar .infos,
-content.defense .infos,
-content.research .infos,
-content.buildings .infoso,
-content.hangar .infoso,
-content.defense .infoso,
-content.research .infoso {
-  margin: 15px 0 0 0;
-}
-
-/* Submit buttons in lists */
-content.buildings.hangar input[type=submit].b,
-content.hangar.hangar input[type=submit].b,
-content.defense.hangar input[type=submit].b,
-content.research.hangar input[type=submit].b {
-  border: 1px solid #26282b !important;
-  color: #bde6a0 !important;
-  padding: 5px 15px !important;
-  background: #2a2c30 !important;
-  min-height: 0;
-  margin: 15px 0;
-}
-
-/* Header / logo */
-header .planetImage,
-header .fixed img,
-logo .fixed a {
-  display: none;
-}
-logo .fixed {
-  background: url('https://pro-ffview.gamers-universe.eu/logo-n.png') no-repeat left center !important;
-  background-size: contain !important;
-}
-
-/* Top bars */
-top,
-.wrapper .fixed,
-header {
-  height: 60px;
-  min-height: 0;
-}
-top #planetSelector,
-.wrapper .fixed #planetSelector,
-header #planetSelector {
-  top: 15px;
-  width: auto;
-}
-
-@media (max-width: 699px) {
-  top #planetSelector,
-  .wrapper .fixed #planetSelector,
-  header #planetSelector {
-    top: 50px;
-  }
-}
-
-@media (max-width: 799px) {
-  .planet-list {
-    display: none !important;
-  }
-}
-
-top #resource_mobile,
-.wrapper .fixed #resource_mobile,
-header #resource_mobile {
-  margin-top: 15px !important;
-}
-
-menu .fixed {
-  top: 50px;
-}
-
-/* Layout */
+/* Make wrapper use full viewport */
 .wrapper {
-  grid-template-rows: 50px 1fr auto;
-}
-.wrapper .fixed {
-  /* was rgba(0, 0, 0, 0.9) */
-  background: rgba(15, 17, 22, 0.9);
-}
-
-/* Highlight text */
-.wrapper .highlight {
-  color: #ff7a55 !important;
-  margin-top: 5px;
-  display: block;
-}
-
-/* Small meta text */
-.wrapper .player_names {
-  font-size: 10px;
-  color: #9ca0a8;
-}
-
-/* Tables */
-.wrapper #hubOverview th,
-.wrapper #hubOverview td {
-  padding: 3px 5px;
-}
-.wrapper table {
-  width: 100% !important;
-  max-width: inherit !important;
-}
-.wrapper table th {
-  background: transparent;
-  border: none !important;
-  padding: 5px 10px !important;
-}
-.wrapper table td {
-  border: none !important;
-  /* was #161618 */
-  outline: 1px solid #2c2f36;
-  padding: 3px 10px;
-}
-
-/* Main menu */
-.wrapper ul#menu {
-  /* was #161618 */
-  background: #181b22;
-  padding: 10px 0;
-  margin: 10px 0;
-}
-.wrapper ul#menu li,
-.wrapper ul#menu li a {
-  border: none !important;
-  background: none !important;
-  text-align: left !important;
-  font-size: 12px;
-  /* slightly softer text */
-  color: #e2e5ec;
-}
-.wrapper ul#menu li i,
-.wrapper ul#menu li a i {
-  display: inline-block;
-  width: 20px;
-  opacity: 0.75;
-}
-.wrapper ul#menu li:hover,
-.wrapper ul#menu li a:hover {
-  color: #8fd0d7 !important;
-  font-weight: normal !important;
-}
-.wrapper ul#menu .menu-separator {
-  height: 1px !important;
-  border-bottom: 2px solid rgba(255, 122, 85, 0.35) !important;
+  grid-template-rows: 60px 1fr auto !important;
+  height: 100vh !important;
+  width: 100vw !important;
+  max-width: none !important;
+  margin: 0 !important;
   padding: 0 !important;
-  min-height: auto !important;
-  margin: 10px;
+  display: grid !important;
 }
 
-/* Content */
+/* Content uses all available space */
 .wrapper content {
-  padding-top: 10px;
-  max-width: 1400px !important;
-}
-
-/* Message banner */
-.wrapper content .message {
-  /* was #ee4d2e */
-  background: #ff7a55;
-  text-align: left;
-  padding-left: 50px;
-  top: 15px;
-  right: 15px;
-  z-index: 10000;
-  transition: background 200ms ease-in-out;
-}
-.wrapper content .message a {
-  transition: all 200ms ease-in-out;
-}
-.wrapper content .message:before {
-  transition: all 250ms ease-in-out;
-  content: "\f0e0";
-  position: absolute;
-  left: 15px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 30px;
-  font-weight: 300;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
-  display: inline-block;
-  font-style: normal;
-  font-variant: normal;
-  text-rendering: auto;
-  line-height: 1;
-}
-.wrapper content .message:hover {
-  background: #e4e7ef;
-}
-.wrapper content .message:hover:before,
-.wrapper content .message:hover a,
-.wrapper content .message:hover a:hover {
-  font-weight: 300 !important;
-  color: #181b22 !important;
-}
-
-/* Lists / build info */
-.wrapper content .infos > ul#hidden-div2 li {
-  display: flex;
-}
-.wrapper content .infos > ul#hidden-div2 li > * {
-  text-align: left;
-}
-.wrapper content .infos > ul#hidden-div2 li > span:first-child,
-.wrapper content .infos > ul#hidden-div2 li > span:nth-child(2),
-.wrapper content .infos > ul#hidden-div2 li > span:nth-child(4) {
-  flex-basis: 10%;
-}
-.wrapper content .infos > ul#hidden-div2 li > span:nth-child(3) {
-  width: 70%;
-}
-
-/* Build list panel */
-.wrapper content #buildlist {
-  border: none !important;
-  background: #181b22 !important;
-  margin: 0 0 15px 0;
-  overflow: inherit;
-  display: flex;
-}
-.wrapper content #buildlist > div:nth-child(2) {
-  flex-basis: 250px;
-}
-.wrapper content #buildlist > div {
-  border: none;
-}
-.wrapper content #buildlist button {
-  margin: 10px 0;
-}
-.wrapper content #buildlist .bulida,
-.wrapper content #buildlist .bulidb,
-.wrapper content #buildlist .buildb {
-  float: none !important;
+  padding: 10px !important;
   width: 100% !important;
-  height: auto !important;
-}
-.wrapper content #buildlist .bulida span[style],
-.wrapper content #buildlist .bulidb span[style],
-.wrapper content #buildlist .buildb span[style] {
-  color: #ff7a55 !important;
+  max-width: none !important;
+  height: 100% !important;
+  box-sizing: border-box !important;
+  overflow-y: auto;
 }
 
-/* Building / hangar rows */
-.wrapper content .building,
-.wrapper content .hangar > form {
-  height: auto;
-  display: flex;
-}
-.wrapper content .building > div:nth-child(1),
-.wrapper content .hangar > form > div:nth-child(1) {
-  flex-basis: 25%;
-  text-align: left;
-  /* was #161618 */
-  background: #181b22;
-}
-.wrapper content .building a:hover,
-.wrapper content .hangar > form a:hover {
-  color: #8fd0d7 !important;
-  font-weight: normal;
-}
-.wrapper content .building .building-left,
-.wrapper content .hangar > form .building-left {
-  height: auto;
-  text-align: left;
-}
-.wrapper content .building .building-left img,
-.wrapper content .hangar > form .building-left img {
-  height: 75px;
-  width: auto;
-  margin-right: 30px !important;
-}
-.wrapper content .building .building-left span[style],
-.wrapper content .hangar > form .building-left span[style] {
-  color: #ff7a55 !important;
-}
-.wrapper content .building .building-right,
-.wrapper content .hangar > form .building-right {
-  height: auto;
-  padding: 15px;
-  text-align: right;
-}
-.wrapper content .building .building-right form button,
-.wrapper content .hangar > form .building-right form button {
-  max-width: 100%;
+/* Tables use full width */
+.wrapper table {
+  width: 100vw !important;
+  max-width: none !important;
+  margin-left: calc(-50vw + 50%) !important;
+  margin-right: calc(-50vw + 50%) !important;
 }
 
-/* Progressbars */
-.wrapper .ui-progressbar {
-  /* was #1b1e1f */
-  background: #22252c !important;
-}
-.wrapper .ui-progressbar .ui-progressbar-value {
-  background: #ff7a55;
-  background-image: linear-gradient(
-    45deg,
-    rgba(255, 255, 255, 0.18) 25%,
-    transparent 25%,
-    transparent 50%,
-    rgba(255, 255, 255, 0.18) 50%,
-    rgba(255, 255, 255, 0.18) 75%,
-    transparent 75%,
-    transparent
-  );
-  border: none;
+/* Build list full width */
+.wrapper content #buildlist {
+  width: 100vw !important;
+  margin-left: calc(-50vw + 50%) !important;
+  position: relative;
+  left: 50%;
+  right: 50%;
+  margin-left: -50vw;
+  margin-right: -50vw;
 }
 
-/* Generic buttons */
-.wrapper button {
-  padding: 5px 15px;
-  border: 1px solid #26282b;
-  background: #22252c;
+/* Desktop-specific full-width (1920x1080 and similar) */
+@media screen and (min-width: 1920px) and (max-height: 1080px) {
+  .wrapper content {
+    max-width: 1920px !important;
+    margin: 0 auto !important;
+    padding: 10px 20px !important;
+  }
+  
+  .wrapper table,
+  .wrapper content #buildlist {
+    max-width: 1920px !important;
+    margin-left: auto !important;
+    margin-right: auto !important;
+    width: 100% !important;
+  }
 }
 
-/* Panels */
-.wrapper .planeto,
-.wrapper .infos,
-.wrapper .infoso,
-.wrapper .buildl {
-  /* was #161618 */
-  background: #181b22 !important;
-}
-.wrapper .planeto .buildn,
-.wrapper .infos .buildn,
-.wrapper .infoso .buildn,
-.wrapper .buildl .buildn {
-  /* was #1b1e1f */
-  background: #22252c;
-  padding: 15px;
+/* Responsive for smaller desktop screens */
+@media screen and (min-width: 1200px) and (max-width: 1919px) {
+  .wrapper content {
+    max-width: 1200px !important;
+    margin: 0 auto !important;
+  }
 }
 
-/* Mobile resources */
-#resources_mobile img {
-  display: inline !important;
-}
-#resources_mobile .resource_name {
-  color: #ff7a55;
-}
-#resources_mobile .res_current {
-  color: #f2f5f4;
-  display: inline;
-}
-#resources_mobile .res_current:after {
-  content: ' / ';
-}
-#resources_mobile .res_current.res_current_max {
-  color: #ff7a55;
-}
-#resources_mobile .res_max {
-  display: inline;
-}
-#resources_mobile #resource_mobile:last-child span[style] {
-  color: #ff7a55 !important;
-}
-#resources_mobile a:hover {
-  font-weight: normal;
-  color: #8fd0d7 !important;
-}
-
-/* Badges */
-.badge {
-  display: inline-block;
-  font-size: 10px;
-  text-transform: uppercase;
-  padding: 3px;
-  font-weight: bold;
-}
-.badge-ress,
-.badge-fight,
-.badge-ships,
-.badge-nothing,
-.badge-black-hole {
-  float: right;
-}
-.badge-ress {
-  background: #bde6a0;
-  color: #181b22;
-}
-.badge-fight {
-  background: #ff7a55;
-  color: #f2f5f4;
-}
-.badge-ships {
-  background: #8fd0d7;
-  color: #181b22;
-}
-.badge-nothing {
-  background: #a0a4aa;
-  color: #181b22;
-}
-.badge-black-hole {
-  background: #05070b;
-  color: #ff7a55;
-}
-
-/* Fade helpers */
-.fade-25,
-.fade-75 {
-  opacity: 0.25 !important;
-  transition: opacity 250ms ease-in-out;
-}
-.fade-25.fade-75,
-.fade-75.fade-75 {
-  opacity: 0.75 !important;
-}
-.fade-25:hover,
-.fade-75:hover {
-  opacity: 0.9 !important;
-}
-
-/* Tooltip */
-#tooltip {
-  max-width: 750px !important;
-}
-
-/* Hub content spacing */
-content.hub .infos,
-content.hub .infos
+/* Keep all your existing styles below - they will now scale properly */
