--- a/docs/skin.css
+++ b/docs/skin.css
@@ -194,10 +194,8 @@ menu .fixed {
 }
 .wrapper ul#menu li,
 .wrapper ul#menu li a {
-  border: none !important;
   background: none !important;
-  text-align: left !important;
-  font-size: 12px;
+  font-size: 13px;
   /* slightly softer text */
   color: #e2e5ec;
 }
@@ -213,11 +211,8 @@ menu .fixed {
   font-weight: normal !important;
 }
 .wrapper ul#menu .menu-separator {
-  height: 1px !important;
-  border-bottom: 2px solid rgba(255, 122, 85, 0.35) !important;
-  padding: 0 !important;
-  min-height: auto !important;
-  margin: 10px;
+  border-bottom: 10px solid;
+  border-color: rgba(13, 16, 20, 0.95) !important;
 }
 
 /* Content */
